frontend: fixed missing background color for dropdown menus

--- a/src/renderer/src/components/common/DropDown.module.css
+++ b/src/renderer/src/components/common/DropDown.module.css
@@ -17,6 +17,7 @@
   min-width: 10rem;
   max-width: 20rem;
   box-sizing: border-box;
+  background-color: white;
   border: 2px solid lightgray;
   padding: 0.25rem 0;
 }
